<resources>
    <string name="app_name">MyFitness</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="persons">Persons :</string>
    <string name="link">Link</string>
    <string name="recipeImage">recipeImage</string>
    <string name="_1">1</string>
    <string name="ingredient">Ingredient</string>
    <string name="select">Select Item</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">NO</string>
</resources>