<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".view.ProfileActivity">

    <RelativeLayout
        android:id="@+id/MainContain_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

            <TextView
                android:id="@+id/Name_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/Email_ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Name_TV"
                android:layout_alignStart="@+id/Name_TV"
                android:layout_alignEnd="@+id/Name_TV"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textAlignment="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Email_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Name_TV"
                android:layout_alignStart="@+id/Name_TV"
                android:layout_alignEnd="@+id/Name_TV"
                android:layout_marginEnd="15dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Button
                android:id="@+id/Logout_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email_ET"
                android:layout_alignStart="@+id/Email_ET"
                android:layout_alignEnd="@+id/Email_ET"
                android:layout_marginTop="15dp"
                android:text="@string/logout" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BackDialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/teal_200"
        android:backgroundTint="@color/teal_200"
        android:padding="30dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Ok_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            app:layout_constraintEnd_toStartOf="@id/Cancel_BTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <Button
            android:id="@+id/Cancel_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="@id/Ok_BTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Ok_BTN"
            app:layout_constraintTop_toTopOf="@id/Ok_BTN" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>