<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".view.LoginActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="15dp"
        android:textColorHint="@color/teal_200"
        android:layout_marginBottom="15dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="password"
        android:layout_marginStart="15dp"
        android:textColorHint="@color/teal_200"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:padding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="50dp" />

    <Button
        android:id="@+id/Login_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignStart="@+id/editTextTextPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="28dp"
        android:padding="15dp"
        android:backgroundTint="@color/teal_200"
        android:layout_marginEnd="21dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/Register_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/Login_BTN"
        android:layout_alignEnd="@+id/Login_BTN"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:padding="15dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_BTN"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="163dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>