<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/recipeImage"
        app:layout_constraintEnd_toStartOf="@id/recipeNameTxt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/recipeNameTxt_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/RecipeLink_Btn"/>

    <Button
        android:id="@+id/RecipeLink_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/recipeNameTxt_view" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/CaloriesServTxt_View"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:id="@+id/CaloriesServTxt_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider4"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/PerServing_ET"
        app:layout_constraintEnd_toStartOf="@id/PerServing_ET"
        app:layout_constraintStart_toEndOf="@id/CaloriesServTxt_View"/>
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persons"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/divider4"
        app:layout_constraintTop_toTopOf="@id/PerServing_ET"
        app:layout_constraintBottom_toBottomOf="@id/PerServing_ET"
        app:layout_constraintEnd_toStartOf="@id/PerServing_ET"/>

    <EditText
        android:id="@+id/PerServing_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/_1"
        android:ems="2"
        android:autofillHints="1"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="SpeakableTextPresentCheck" />


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/ingredientText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4" />

    <TextView
        android:id="@+id/ingredientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/Ingredients_RV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Ingredients_RV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:listitem="@layout/ingredients_list_items"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredientText" />


</androidx.constraintlayout.widget.ConstraintLayout>