<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".view.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/FirstName_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="@color/teal_200"
            android:padding="15dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            app:layout_constraintBottom_toTopOf="@id/EmailAddress_ET"
            app:layout_constraintEnd_toStartOf="@id/LastName_ET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/LastName_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/last_name"
            android:textColorHint="@color/teal_200"
            android:padding="15dp"
            android:inputType="text"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            app:layout_constraintBottom_toBottomOf="@+id/FirstName_ET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/FirstName_ET"
            app:layout_constraintTop_toTopOf="@+id/FirstName_ET" />

        <EditText
            android:id="@+id/EmailAddress_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/teal_200"
            android:padding="15dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/Password_ET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FirstName_ET" />

        <EditText
            android:id="@+id/Password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:textColorHint="@color/teal_200"
            android:padding="15dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/RePassword_ET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EmailAddress_ET" />

        <EditText
            android:id="@+id/RePassword_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:padding="15dp"
            android:textColorHint="@color/teal_200"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/Register_BTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Password_ET" />

        <Button
            android:id="@+id/Register_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="15dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RePassword_ET" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>