<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:backgroundTint="@color/teal_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <ImageView
            android:id="@+id/recipeImage_view"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@id/recipeNameTxt_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView

            android:id="@+id/recipeNameTxt_view"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#004D40"
            app:layout_constraintBottom_toTopOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="@id/recipeImage_view"
            app:layout_constraintStart_toStartOf="@id/recipeImage_view"
            app:layout_constraintTop_toBottomOf="@id/recipeImage_view"
            tools:text="@string/app_name" />

        <View
            android:id="@+id/divider2"
            android:layout_width="138dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeNameTxt_view" />

        <TextView
            android:id="@+id/CaloriesTxt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/IngredientTxt_view"
            app:layout_constraintStart_toEndOf="@id/CaloriesTxt_view"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/IngredientTxt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider3"
            app:layout_constraintTop_toBottomOf="@id/divider2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>